--- a/index.html
+++ b/index.html
@@ -52,8 +52,18 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
 </head>
 <body>
   <div id="main">
-    Hello world!   <!-- You'll be deleting this line in the course -->
+ <!--   Hello world!   <!-- You'll be deleting this line in the course -->
+<script>
+var awsomeThoughts = "I am your Venkat Ratnam Naidu and I am Awsome";
+//console.log(awsomeThoughts);
+awsomeThoughts
 
+<!--var {{varname = some value }};<!--var myArray = []  --><!-- myFunc = Function(){}><!-- myObject = {} -->
+var email = "Venkatratnamnaidu@gmail.com";
+var newEmail = email.replace("gmail","google");
+console.log(email);
+console.log(newEmail);
+</script>
     <!--
     Everything from here to the <script> tag below is the skeleton of your
     website. Your code will add information to each of the sections of the
